--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
-encoding//src/TestForSber.java=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/java/TestForSber.java=UTF-8
